ops/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-frontend
  namespace: axion
  labels:
    app: axion-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axion-frontend
  template:
    metadata:
      labels:
        app: axion-frontend
    spec:
      containers:
        - name: axion-frontend
          image: krishanand01/axion-frontend:v2.2
          ports:
            - containerPort: 5173
          volumeMounts:
            - name: env-file
              mountPath: /app/.env
              subPath: env
      volumes:
        - name: env-file
          secret:
            secretName: axion-frontend-env
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-backend
  namespace: axion
  labels:
    app: axion-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axion-backend
  template:
    metadata:
      labels:
        app: axion-backend
    spec:
      containers:
        - name: axion-backend
          image: krishanand01/axion-backend:v2.1
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: env-file
              mountPath: /app/apps/backend/.env
              subPath: env
            - name: gcp-key-volume
              mountPath: /app/apps/backend/vm-manager.json
              subPath: vm-manager.json
              readOnly: true
      volumes:
        - name: env-file
          secret:
            secretName: axion-backend-env
        - name: gcp-key-volume
          secret:
            secretName: gcp-key-secret

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-worker
  namespace: axion
  labels:
    app: axion-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axion-worker
  template:
    metadata:
      labels:
        app: axion-worker
    spec:
      containers:
        - name: axion-worker
          image: krishanand01/axion-worker:v2.1
          volumeMounts:
            - name: env-file
              mountPath: /app/apps/worker/.env
              subPath: env
            - name: gcp-key-volume
              mountPath: /app/apps/worker/vm-manager.json
              subPath: vm-manager.json
      volumes:
        - name: env-file
          secret:
            secretName: axion-worker-env
        - name: gcp-key-volume
          secret:
            secretName: gcp-key-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-ws-relayer
  namespace: axion
  labels:
    app: axion-ws-relayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axion-ws-relayer
  template:
    metadata:
      labels:
        app: axion-ws-relayer
    spec:
      containers:
        - name: axion-ws-relayer
          image: krishanand01/axion-ws-relayer:v1.1
          ports:
            - containerPort: 9093
          volumeMounts:
            - name: env-file
              mountPath: /app/.env
              subPath: env
      volumes:
        - name: env-file
          secret:
            secretName: axion-ws-relayer-env

apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-depin-ws-relayer
  namespace: axion
  labels:
    app: axion-depin-ws-relayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axion-depin-ws-relayer
  template:
    metadata:
      labels:
        app: axion-depin-ws-relayer
    spec:
      containers:
        - name: axion-depin-ws-relayer
          image: krishanand01/axion-depin-ws-relayer:v2.1
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: axion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        emptyDir: {}
