ops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: axion-frontend
  namespace: axion
spec:
  selector:
    app: axion-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: axion-backend
  namespace: axion
spec:
  selector:
    app: axion-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: axion-ws-relayer
  namespace: axion
spec:
  selector:
    app: axion-ws-relayer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9093
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: axion
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: axion-depin-ws-relayer
  namespace: axion
spec:
  selector:
    app: axion-depin-ws-relayer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
