ops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: decloud
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"  
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"  
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"   
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.decloud.krishlabs.tech
      secretName: decloud-backend-tls
    - hosts:
        - wss.decloud.krishlabs.tech
      secretName: decloud-ws-relayer-tls
    - hosts:
        - wss.depin.decloud.krishlabs.tech
      secretName: decloud-depin-ws-relayer-tls

  rules:
    - host: decloud.krishlabs.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: decloud-frontend
                port:
                  number: 80

    - host: api.decloud.krishlabs.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: decloud-backend
                port:
                  number: 80
    - host: wss.decloud.krishlabs.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: decloud-ws-relayer
                port:
                  number: 80

    - host: wss.depin.decloud.krishlabs.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: decloud-depin-ws-relayer
                port:
                  number: 80
---
